# Pattern-Recognition-Gr7

./: .gitignore  README.md  pyproject.toml
Assignment 2/: README.md  spam.ipynb  task.ipynb
Assignment-1/Task_1/: script.ipynb  script.py
Assignment-1/Task_10/: script.ipynb
Assignment-1/Task_2/: task2.ipynb
Assignment-1/Task_3/: script.ipynb
Assignment-1/Task_4/: script.ipynb
Assignment-1/Task_5/: task.ipynb
Assignment-1/Task_7/: script.ipynb
Assignment-1/Task_8/: script.ipynb  script_part1.ipynb  task_part2.ipynb  task_part3.ipynb
Assignment-1/Task_9/: script.ipynb  task.ipynb
Assignment-2/: GeneAnalysis.py  Genes_run_gridsearch.py  README.md  clustering_genes.ipynb  data_analysis_genes.ipynb  feature_extraction_genes.ipynb  genes_pipeline.py  grid_search_evaluation.ipynb  habrok_run_gridsearch _k3.sh  habrok_run_gridsearch _loo.sh  habrok_run_gridsearch _loo_1.sh  habrok_run_gridsearch _loo_2.sh  habrok_run_gridsearch _loo_3.sh  habrok_run_gridsearch _no_cv.sh  habrok_run_gridsearch.sh  image_classification.ipynb  image_clustering.ipynb  image_figure.ipynb  knn_classification_genes.ipynb  mutual_info_genes.pkl  random_forest_genes.ipynb  requirements.txt  run_gridsearch.py  semi-supervised.ipynb  semi-supervised.py  testing.py
Assignment-2/Genes_plots/: test_KFold_2_grid_search.pkl
Assignment-2/Genes_results/: KFold_2_grid_search.pkl  No_cv_grid_search.pkl  all_cv_grid_search_results.pkl  test_all_cv_grid_search_results.pkl
Assignment-2/habrok_jobs/: habrok_run_gridsearch _k3.sh  habrok_run_gridsearch _loo.sh  habrok_run_gridsearch _loo_1.sh  (+5 more)
