[tool.poetry]
name = "pattern-recognition-gr7"
version = "0.1.0"
description = ""
authors = ["YG29 <y.gao.29@student.rug.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
notebook = "^7.2.2"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
tensorflow-macos = "^2.16.2"
tensorflow-metal = "^1.1.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
